# serializer version: 1
# name: test_entity[number.default_comfort_livingroom-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 30.0,
      'min': 7.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.default_comfort_livingroom',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Default Comfort Livingroom Temperature',
    'platform': 'netatmo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '91763b24c43d3e344f424e8b-591b54a2764ff4d50d8b5795-0-2746182631',
    'unit_of_measurement': '°C',
  })
# ---
# name: test_entity[number.default_comfort_livingroom-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Default Comfort Livingroom Temperature',
      'max': 30.0,
      'min': 7.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.5,
      'unit_of_measurement': '°C',
    }),
    'context': <ANY>,
    'entity_id': 'number.default_comfort_livingroom',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '21',
  })
# ---
# name: test_entity[number.default_eco_livingroom-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 30.0,
      'min': 7.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.default_eco_livingroom',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Default Eco Livingroom Temperature',
    'platform': 'netatmo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '91763b24c43d3e344f424e8b-591b54a2764ff4d50d8b5795-4-2746182631',
    'unit_of_measurement': '°C',
  })
# ---
# name: test_entity[number.default_eco_livingroom-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Default Eco Livingroom Temperature',
      'max': 30.0,
      'min': 7.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.5,
      'unit_of_measurement': '°C',
    }),
    'context': <ANY>,
    'entity_id': 'number.default_eco_livingroom',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '17',
  })
# ---
# name: test_entity[number.default_night_livingroom-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 30.0,
      'min': 7.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.default_night_livingroom',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Default Night Livingroom Temperature',
    'platform': 'netatmo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '91763b24c43d3e344f424e8b-591b54a2764ff4d50d8b5795-1-2746182631',
    'unit_of_measurement': '°C',
  })
# ---
# name: test_entity[number.default_night_livingroom-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Default Night Livingroom Temperature',
      'max': 30.0,
      'min': 7.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.5,
      'unit_of_measurement': '°C',
    }),
    'context': <ANY>,
    'entity_id': 'number.default_night_livingroom',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '17',
  })
# ---
# name: test_entity[number.winter_comfort_livingroom-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 30.0,
      'min': 7.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.winter_comfort_livingroom',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Winter Comfort Livingroom Temperature',
    'platform': 'netatmo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '91763b24c43d3e344f424e8b-b1b54a2f45795764f59d50d8-0-2746182631',
    'unit_of_measurement': '°C',
  })
# ---
# name: test_entity[number.winter_comfort_livingroom-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Winter Comfort Livingroom Temperature',
      'max': 30.0,
      'min': 7.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.5,
      'unit_of_measurement': '°C',
    }),
    'context': <ANY>,
    'entity_id': 'number.winter_comfort_livingroom',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '21',
  })
# ---
# name: test_entity[number.winter_eco_livingroom-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 30.0,
      'min': 7.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.winter_eco_livingroom',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Winter Eco Livingroom Temperature',
    'platform': 'netatmo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '91763b24c43d3e344f424e8b-b1b54a2f45795764f59d50d8-4-2746182631',
    'unit_of_measurement': '°C',
  })
# ---
# name: test_entity[number.winter_eco_livingroom-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Winter Eco Livingroom Temperature',
      'max': 30.0,
      'min': 7.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.5,
      'unit_of_measurement': '°C',
    }),
    'context': <ANY>,
    'entity_id': 'number.winter_eco_livingroom',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '17',
  })
# ---
# name: test_entity[number.winter_night_livingroom-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 30.0,
      'min': 7.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.winter_night_livingroom',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Winter Night Livingroom Temperature',
    'platform': 'netatmo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '91763b24c43d3e344f424e8b-b1b54a2f45795764f59d50d8-1-2746182631',
    'unit_of_measurement': '°C',
  })
# ---
# name: test_entity[number.winter_night_livingroom-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Winter Night Livingroom Temperature',
      'max': 30.0,
      'min': 7.0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 0.5,
      'unit_of_measurement': '°C',
    }),
    'context': <ANY>,
    'entity_id': 'number.winter_night_livingroom',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '17',
  })
# ---
